Refactor Signal Protocol Storage and Update Dependencies for Performance (#2)
* update gradle to latest

* gradle

* doc

* Implement Silence-style Signal Protocol Store and associated tests

- Added SilenceStyleSignalProtocolStore to provide an in-memory implementation of the SignalProtocolStore interface, mirroring the production design for migration validation.
- Created SilenceStyleStoreV3Test to drive a full v3 conversation through the SilenceStyleSignalProtocolStore, ensuring session state survives serialization cycles.
- Introduced KeyExchangeSessionStore to manage transitional key-exchange handshake states in a dedicated on-disk directory.
- Implemented VendoredIdentityKeyStore and VendoredPreKeyStore to handle identity and pre-key storage, ensuring compatibility with existing database structures.
- Developed VendoredSessionStore to manage session records with proper encryption and storage mechanisms.
- Added VendoredSignalProtocolStore to aggregate all storage components, providing a unified interface for managing Signal protocol data.

* Refactor to Minimize Vendored `libsignal` Usage

- Replaced imports and usages of `org.whispersystems.libsignal.*` with `org.signal.libsignal.protocol.*` where applicable, focusing on the transition to the maintained library.
- Updated exception handling to utilize the maintained library's exceptions, specifically `InvalidMessageException`, `InvalidKeyException`, and others.
- Introduced a new local `InvalidMacException` to handle MAC verification failures independently of the Signal Protocol session layer.
- Adjusted `SmsTransportDetails` to remove dependency on vendored `CiphertextMessage` and replaced it with a local constant for encrypted message overhead.
- Added a comprehensive migration plan document outlining the strategy for reducing vendored library usage and ensuring compatibility during the transition.
- Implemented tests to verify byte-compatibility of EC keys and signatures across the vendored and maintained 